--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Marcellus", serif;
+  font-family: "Muli", sans-serif;
   color: #ffffff;
   font-size: 14px; }
 
@@ -10,19 +10,22 @@ body {
   background-color: #e9a403; }
 
 .color-info {
-  background-color: #c1c1c1; }
+  background-color: #acacac; }
 
 .link {
   text-decoration: none;
   color: #ffffff;
-  font: "Marcellus";
+  font: "Muli";
   transition: color 0.1s;
   cursor: pointer; }
 
 .link:hover {
   text-decoration: none;
   color: #ffffff;
-  font: "Marcellus";
+  font: "Muli";
+  color: #ffb200; }
+
+.active .link {
   color: #ffb200; }
 
 .navbar-header {
@@ -36,20 +39,22 @@ body {
 .logo {
   text-decoration: none;
   color: #ffffff;
-  font: "Marcellus";
+  font: "Muli";
   cursor: pointer;
-  font-size: 2rem; }
+  font-size: 2rem;
+  text-shadow: 0px 0px 1rem #000; }
 
 .logo:hover {
   text-decoration: none;
   color: #ffffff;
-  font: "Marcellus"; }
+  font: "Muli"; }
 
 .small-text {
   font-size: 0.7rem; }
 
 .bar {
   background-color: #e9a403;
+  box-shadow: 0px 0px 4px #000000;
   height: 2px;
   width: 3rem;
   display: block; }
@@ -81,5 +86,43 @@ body {
   background: none;
   border: 0px none;
   box-shadow: none; }
+
+.nav-logo {
+  width: 100%;
+  padding: 1.25rem; }
+
+.nav-logo .navbar-brand {
+  position: absolute;
+  top: 0.25rem;
+  left: 50%;
+  transform: translate(-50%, 0); }
+
+#main-navigation {
+  font-size: 12px;
+  border-top: 1px solid #383838; }
+
+#main-navigation .navbar {
+  padding: 0px 1rem; }
+
+#main-navigation .nav-item {
+  transition: background-color 0.1s;
+  padding: 0.25rem 0px; }
+
+#main-navigation .nav-item:hover {
+  background-color: #ffffff;
+  color: #000; }
+
+#main-navigation .link:hover {
+  color: #000;
+  font-weight: bold; }
+
+.navbar-toggler {
+  color: #fff; }
+
+.navbar-toggler .fa-bars {
+  font-size: 2.25rem; }
+
+.navbar-toggler span {
+  display: block; }
 
 /*# sourceMappingURL=style.css.map */
