--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,7 @@
 
 body
 {
-    font-family: "Marcellus", serif;
+    font-family: "Muli", sans-serif;
     color: $text-color;
     font-size: 14px;
 }
@@ -26,7 +26,7 @@ body
 {
     text-decoration: none;
     color: $text-color;
-    font: "Marcellus";
+    font: "Muli";
     transition: color 0.1s;
     cursor: pointer;
 }
@@ -35,7 +35,12 @@ body
 {
     text-decoration: none;
     color: $text-color;
-    font: "Marcellus";
+    font: "Muli";
+    color: $hover-color;
+}
+
+.active .link
+{
     color: $hover-color;
 }
 
@@ -55,16 +60,17 @@ body
 {
     text-decoration: none;
     color: $text-color;
-    font: "Marcellus";
+    font: "Muli";
     cursor: pointer;
     font-size: 2rem;
+    text-shadow: 0px 0px 1rem #000;
 }
 
 .logo:hover
 {
     text-decoration: none;
     color: $text-color;
-    font: "Marcellus";
+    font: "Muli";
 }
 
 .small-text
@@ -75,6 +81,7 @@ body
 .bar
 {
     background-color: $secondary-color;
+    box-shadow: 0px 0px 4px #000000;
     height: 2px;
     width: 3rem;
     display: block;
@@ -118,4 +125,63 @@ body
     background: none;
     border: 0px none;
     box-shadow: none;
+}
+
+.nav-logo
+{
+    width: 100%;
+    padding: 1.25rem;
+}
+
+.nav-logo .navbar-brand
+{
+    position: absolute;
+    top: 0.25rem;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+
+
+#main-navigation
+{
+    font-size: 12px;
+    border-top: 1px solid #383838;
+}
+
+#main-navigation .navbar
+{
+    padding: 0px 1rem;
+}
+
+#main-navigation .nav-item
+{
+    transition: background-color 0.1s;
+    padding: 0.25rem 0px;
+}
+
+#main-navigation .nav-item:hover
+{
+    background-color: $text-color;
+    color: #000;
+}
+
+#main-navigation .link:hover
+{
+    color: #000;
+    font-weight: bold;
+}
+
+.navbar-toggler
+{
+    color: #fff;
+}
+
+.navbar-toggler .fa-bars
+{
+    font-size: 2.25rem;
+}
+
+.navbar-toggler span
+{
+    display: block;
 }
