--- a/sass/style.scss
+++ b/sass/style.scss
@@ -165,10 +165,15 @@ body
     color: #000;
 }
 
-#main-navigation .link:hover
+#main-navigation .nav-item .link:hover
 {
     color: #000;
     font-weight: bold;
+}
+
+#main-navigation .fa-shopping-cart
+{
+    font-size: 2rem;
 }
 
 .navbar-toggler
