--- a/sass/_palette.scss
+++ b/sass/_palette.scss
@@ -2,4 +2,6 @@ $primary-color: #222222;
 $secondary-color: #e9a403;
 $hover-color: #ffb200;
 $text-color: #ffffff;
-$info-color: #acacac;
+$info-color: #c1c1c1;
+
+$info-color-alpha: rgba(193, 193, 193, 0.5);
