--- a/sass/style.scss
+++ b/sass/style.scss
@@ -271,6 +271,11 @@ h1
     color: $hover-color !important;
 }
 
+.manf-logo
+{
+    cursor: pointer;
+}
+
 @media (max-width: 991.98px)
 {
     #main-navigation
