--- a/sass/style.scss
+++ b/sass/style.scss
@@ -128,6 +128,7 @@ h1
     border: 0px none;
     border-radius: 0px;
     color: $text-color !important;
+    width: 300px !important;
 }
 
 .search-box:focus
