--- a/css/style.css
+++ b/css/style.css
@@ -120,9 +120,8 @@ h1 {
   background-color: #ffffff;
   color: #000; }
 
-#main-navigation .nav-item .link:hover {
-  color: #000;
-  font-weight: bold; }
+#main-navigation .nav-item:hover .link {
+  color: #000; }
 
 #main-navigation .fa-shopping-cart {
   font-size: 2rem; }
@@ -169,7 +168,8 @@ h1 {
 .usp-block {
   text-align: center;
   font-weight: bold;
-  font-size: 1.125rem; }
+  font-size: 1.125rem;
+  cursor: pointer; }
 
 #categories .img-fluid {
   max-width: 80%; }
@@ -178,10 +178,12 @@ h1 {
   box-shadow: 3px 3px 3px #cacaca;
   font-size: 0.75rem;
   font-weight: bold;
-  cursor: pointer; }
+  cursor: pointer;
+  transition: box-shadow 0.2s;
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1); }
 
-.category:hover .text-dark {
-  color: #ffb200 !important; }
+.category:hover {
+  box-shadow: 5px 5px 5px #c4c4c4; }
 
 .manf-logo {
   cursor: pointer; }
