--- a/sass/style.scss
+++ b/sass/style.scss
@@ -82,6 +82,11 @@ h1
     font: "Muli";
 }
 
+.d-lg-none .logo
+{
+    font-size: 1.65rem;
+}
+
 .small-text
 {
     font-size: 0.7rem;
@@ -383,6 +388,6 @@ h1
 
     #main
     {
-        margin-top: 75px;
+        margin-top: 65px;
     }
 }
