--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,11 @@ h1 {
   background-color: #000;
   color: #fff !important; }
 
+.back-to-top {
+  font-weight: bold;
+  font-size: 0.8rem;
+  cursor: pointer; }
+
 @media (max-width: 991.98px) {
   #main-navigation {
     position: fixed;
@@ -306,7 +311,9 @@ h1 {
     margin-top: 65px; }
 
   #main-navigation .container {
-    max-width: 100% !important; } }
+    max-width: 100% !important;
+    padding-right: 0px !important;
+    padding-left: 0px !important; } }
 @media (min-width: 768px) {
   .img-xs-holder {
     max-width: 100%; } }
