--- a/sass/style.scss
+++ b/sass/style.scss
@@ -459,6 +459,11 @@ h1
         padding-right: 0px !important;
         padding-left: 0px !important;
     }
+
+    #main-navigation .navbar
+    {
+        padding: 0px;
+    }
 }
 @media (min-width: 768px)
 { 
