--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,10 @@ h1 {
   #main-navigation .container {
     max-width: 100% !important;
     padding-right: 0px !important;
-    padding-left: 0px !important; } }
+    padding-left: 0px !important; }
+
+  #main-navigation .navbar {
+    padding: 0px; } }
 @media (min-width: 768px) {
   .img-xs-holder {
     max-width: 100%; } }
