--- a/sass/style.scss
+++ b/sass/style.scss
@@ -463,6 +463,7 @@ h1
     #main-navigation .navbar
     {
         padding: 0px;
+        padding-right: 0.5rem;
     }
 }
 @media (min-width: 768px)
