--- a/css/style.css
+++ b/css/style.css
@@ -305,7 +305,11 @@ h1 {
     top: 0px;
     left: 0px;
     width: 100%;
-    z-index: 1030; }
+    z-index: 1030;
+    transition: top 0.2s ease-in-out; }
+
+  #main-navigation.nav-up {
+    top: -68px; }
 
   #main {
     margin-top: 65px; }
@@ -317,7 +321,7 @@ h1 {
 
   #main-navigation .navbar {
     padding: 0px;
-    padding-right: 0.5rem; } }
+    padding-right: 1rem; } }
 @media (min-width: 768px) {
   .img-xs-holder {
     max-width: 100%; } }
