--- a/sass/style.scss
+++ b/sass/style.scss
@@ -446,6 +446,12 @@ h1
         left: 0px;
         width: 100%;
         z-index: 1030;
+        transition: top 0.2s ease-in-out;
+    }
+
+    #main-navigation.nav-up
+    {
+        top: -68px;
     }
 
     #main
@@ -463,7 +469,7 @@ h1
     #main-navigation .navbar
     {
         padding: 0px;
-        padding-right: 0.5rem;
+        padding-right: 1rem;
     }
 }
 @media (min-width: 768px)
