--- a/sass/style.scss
+++ b/sass/style.scss
@@ -469,7 +469,11 @@ h1
     #main-navigation .navbar
     {
         padding: 0px;
-        padding-right: 1rem;
+    }
+
+    #main-navigation .shopping-cart
+    {
+        margin-right: 1rem;
     }
 }
 @media (min-width: 768px)
