--- a/css/style.css
+++ b/css/style.css
@@ -299,7 +299,7 @@ h1 {
   font-size: 0.8rem;
   cursor: pointer; }
 
-.small-text {
+#footer .small-text {
   font-size: 0.75rem;
   padding: 2rem 0px 1rem 0px;
   word-spacing: 0.075rem; }
