--- a/css/style.css
+++ b/css/style.css
@@ -315,7 +315,7 @@ h1 {
   padding: calc(0.5rem + 1px);
   background-color: #e9a403;
   transition: background-color 0.3s;
-  border: 1px solid #ccc;
+  border: 1px solid #c1c1c1;
   cursor: pointer; }
 
 #footer-menu {
