--- a/sass/style.scss
+++ b/sass/style.scss
@@ -460,7 +460,7 @@ h1
     padding: calc(0.5rem + 1px);
     background-color: $secondary-color;
     transition: background-color 0.3s;
-    border: 1px solid #ccc;
+    border: 1px solid $info-color;
     cursor: pointer;
 }
 
