--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,7 +12,6 @@ h1
     color: #000;
     text-align: center;
     font-size: 1.4rem;
-    font-family: 'Playfair Display', serif;
     letter-spacing: 7px;
 }
 
@@ -490,6 +489,84 @@ h1
 #copyrights
 {
     border-top: 1px solid #cacaca;
+}
+
+.sign-in-icon
+{
+    background-color: $info-color;
+    border-radius: 50%;
+    font-size: 6rem;
+    width: 108px;
+    height: 108px;
+    overflow: hidden;
+    color: #f0f0f0;
+}
+
+#signUp 
+{
+    input
+    {
+        padding: 0.5rem;
+        width: 90%;
+        margin: 1rem auto 0.5rem auto;
+        display: block;
+    }
+
+    input[type="submit"]
+    {
+        padding: calc(0.5rem + 1px);
+        background-color: $secondary-color;
+        transition: background-color 0.3s;
+        border: 1px solid $info-color;
+        cursor: pointer;
+    }
+
+    input[type="submit"]:hover
+    {
+        background-color: $hover-color;
+    }
+}
+
+#contact 
+{
+    input, textarea
+    {
+        padding: 0.5rem;
+        width: 90%;
+        margin: 1rem auto 0.5rem auto;
+        display: block;
+    }
+
+    input[type="submit"]
+    {
+        padding: calc(0.5rem + 1px);
+        background-color: $secondary-color;
+        transition: background-color 0.3s;
+        border: 1px solid $info-color;
+        cursor: pointer;
+    }
+
+    input[type="submit"]:hover
+    {
+        background-color: $hover-color;
+    }
+
+    p
+    {
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    p span
+    {
+        color: #007bff;
+        cursor: pointer;
+    }
+
+    p span:hover
+    {
+        text-decoration: underline;
+    }
 }
 
 @media (max-width: 991.98px)
