--- a/css/style.css
+++ b/css/style.css
@@ -380,6 +380,59 @@ h1 {
 #contact p span:hover {
   text-decoration: underline; }
 
+.filter-btn {
+  width: 100%;
+  padding: calc(0.5rem + 1px);
+  background-color: #e9a403;
+  transition: background-color 0.3s;
+  border: 1px solid #c1c1c1;
+  cursor: pointer; }
+
+.gallery-item {
+  position: relative; }
+
+.gallery-item img {
+  display: block;
+  margin: 0px auto; }
+
+.gallery-overlay {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  transition: background-color 0.3s; }
+
+.gallery-overlay:hover {
+  background-color: rgba(0, 0, 0, 0.3); }
+
+.gallery-overlay:hover .gallery-button {
+  opacity: 1; }
+
+.gallery-button {
+  position: absolute;
+  bottom: 1rem;
+  left: 0px;
+  width: 100%;
+  opacity: 0;
+  transition: opacity 0.3s; }
+
+.gallery-button-content {
+  margin: 0px auto;
+  padding: 0.25rem;
+  width: 45%;
+  border: 1px solid #494949;
+  background-color: rgba(90, 189, 90, 0.1);
+  transition: background-color 0.3s;
+  cursor: pointer;
+  text-align: center; }
+
+.gallery-button-content span {
+  font-size: 1.5em; }
+
+.gallery-button-content:hover {
+  background-color: rgba(90, 189, 90, 0.5); }
+
 @media (max-width: 991.98px) {
   #main-navigation {
     position: fixed;
