--- a/sass/style.scss
+++ b/sass/style.scss
@@ -569,6 +569,79 @@ h1
     }
 }
 
+.filter-btn
+{
+    width: 100%;
+    padding: calc(0.5rem + 1px);
+    background-color: $secondary-color;
+    transition: background-color 0.3s;
+    border: 1px solid $info-color;
+    cursor: pointer;
+}
+
+.gallery-item
+{
+    position: relative;
+}
+
+.gallery-item img
+{
+    display: block;
+    margin: 0px auto;
+}
+
+.gallery-overlay
+{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    transition: background-color 0.3s;
+}
+
+.gallery-overlay:hover
+{
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.gallery-overlay:hover .gallery-button
+{
+    opacity: 1;
+}
+
+.gallery-button
+{
+    position: absolute;
+    bottom: 1rem;
+    left: 0px;
+    width: 100%;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.gallery-button-content
+{
+    margin: 0px auto;
+    padding: 0.25rem;
+    width: 45%;
+    border: 1px solid rgb(73, 73, 73);
+    background-color: rgba(90, 189, 90, 0.1);
+    transition: background-color 0.3s;
+    cursor: pointer;
+    text-align: center;
+}
+
+.gallery-button-content span
+{
+    font-size: 1.5em;
+}
+
+.gallery-button-content:hover
+{
+    background-color: rgba(90, 189, 90, 0.5);
+}
+
 @media (max-width: 991.98px)
 {
     #main-navigation
